# gpana

./: BUILD.txt  ChangeLog  README.md  memo.txt
src/: CMakeLists.txt  build.sh  gpana.c  gpana.glade  gpana.h  gpana.ui  signals.c  version.h.in
